Adjust commit history preview width and max-width in attempt to correct break-word overflow wrap on chrome

--- a/app/src/components/CommitHistoryBanner/CommitHistoryBanner.css
+++ b/app/src/components/CommitHistoryBanner/CommitHistoryBanner.css
@@ -63,6 +63,8 @@
     }
 
     .commit-history-preview {
+        width: 100%;
+        max-width: 75ch;
         text-align: left;
         font-family: custom-regular;
         overflow-wrap: break-word;
